# leoman

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  GNUmakefile  LICENSE  Makefile  README.md  Tupfile  Tuprules.tup  _start  boot0.asm  boot1.asm  bootsector.asm  loadsector.asm  nihilum.asm  phony-mbr.asm  print.asm  utils.asm  x86_64-unknown-leoman.json
boot/: CMakeLists.txt  Makefile  Tupfile  a20.asm  boot0.asm  boot1.asm  elf.asm  isoboot.asm  isofs.asm  main.asm  main.c  main.ld  memory.asm  ufs.asm  utils.asm
cdiso/: nihilum.flp
drivers/: .gitignore  CMakeLists.txt  Cargo.toml  Tupfile  angle.c  screen.c  screen.h
drivers/.cargo/: config
drivers/src/: main.rs
exec/: shell.c
image/boot/: kernel
include/: ipc.h  queue.h  stdio.h
include/kernel/: atomic.h  com.h  common.h  elf.h  fairy.h  gdt.h  heap.h  idt.h  ipc.h  mmio.h  pci.h  pm.h  print.h  proc.h  sar.h  smp.h  syscall.h  vga.h  vm.h  x86.h
include/msg/: interrupt.h  io.h  irq.h  kernel.h
initrd/: CMakeLists.txt
kernel/: .gitignore  CMakeLists.txt  Cargo.toml  GNUmakefile  Makefile  Tupfile  angle.c  build.rs  com.c  common.h  config.h  elf.c  elf.h  entry.asm  entry_obj.asm  fairy.c  gdt.asm  gdt.c  gdt.h  heap.c  idle.c  idle_other.c  idle_other.c.ld  idt.asm  idt.c  idt.h  initrd.c  initrd.ld  initrdtestfile.c  ipc.c  isr.asm  isr.h  kbd.c  kbd.h  kernel  kernel.c  kernel.ld  linker.ld  mm.c  mm.h  (+29 more)
kernel/.cargo/: config
kernel/src/: lib.rs  main.rs  multiboot_header.asm
kernel/src/arch/x86/: entry.asm  layout.ld  mod.rs  vga.rs
kernel/src/arch/x86_64/: entry.asm  linker.ld
lib/: CMakeLists.txt
lib/libc/: CMakeLists.txt  Tupfile  getc.c  memcpy.c  memset.c  putc.c  puts.c  strlen.c
lib/libipc/: CMakeLists.txt  README  Tupfile  ipc.c
servers/: .gitignore  CMakeLists.txt  kbd  kbd.c  shades.c  vga.c
src/: lib.rs
targets/: i686-unknown-leoman.json
tmp/: kernel_path  kernel_path.c  kernel_path.s
tools/: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  Tupfile  sar  sar.c
